Ssb 0024 inactivate launched share api (#51)
* SSB-0024: inactivate launched share

* SSB-0024: implement delete-joined-share API

* SSB-0024: remove redundant codes
