# backend/routes/share_route.js
@@ -7,6 +7,8 @@ const {
   shareDetailFlow,
   personalLaunchFlow,
   personalJoinFlow,
+  deleteLaunchedShareFlow,
+  deleteJoinedShareFlow,
 } = require("../controllers/share_controller");
 
 router
@@ -28,5 +30,13 @@ router
 router
   .route("/share/personal-join")
   .get(authentication(), wrapAsync(personalJoinFlow));
+
+router
+  .route("/share/delete-launched-share")
+  .put(authentication(), wrapAsync(deleteLaunchedShareFlow));
+
+router
+  .route("/share/delete-joined-share")
+  .put(authentication(), wrapAsync(deleteJoinedShareFlow));
 
 module.exports = router;
