# swagger/swagger_share.json
@@ -339,6 +339,85 @@
         }
       }
     },
+    "/share/delete-launched-share": {
+      "put": {
+        "tags": [
+          "delete-launched-share"
+        ],
+        "summary": "Inactivate a launched share",
+        "description": "Inactivate a launched share",
+        "operationId": "delete-launched-share",
+        "parameters": [
+          {
+            "name": "shareId",
+            "in": "query",
+            "description": "Incativate launched share by share id",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64",
+              "example": 1
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/response-share-info-summary"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "User without token, or token expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Unauthorized."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Not a member",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Forbidden."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Internal Server Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/share/personal-join": {
       "get": {
         "tags": [
@@ -354,6 +433,85 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/response-share-join-info-summary"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "User without token, or token expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Unauthorized."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Not a member",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Forbidden."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Internal Server Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/share/delete-joined-share": {
+      "put": {
+        "tags": [
+          "delete-joined-share"
+        ],
+        "summary": "Inactivate a joined share",
+        "description": "Inactivate a joined share",
+        "operationId": "delete-joined-share",
+        "parameters": [
+          {
+            "name": "matchId",
+            "in": "query",
+            "description": "Incativate joined share by share id",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64",
+              "example": 1
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/response-share-info-summary"
                 }
               }
             }
